<resources>
    <string name="app_name">marquee</string>

    <!--marquee-->
    <string name="marquee_title">Revolving Lamp</string>
    <string name="marquee_radian">Radian</string>
    <string name="marquee_width">Width</string>
    <string name="marquee_speed">Speed</string>
    <string name="marquee_dialog_title">Pick a color</string>
    <string name="marquee_picker_title">Revolving Lamp Color</string>
    <string name="marquee_delete_item">Do you want to delete this item?</string>
    <string name="marquee_add">Add</string>
    <string name="marquee_flag_new">New</string>
    <string name="marquee_flag_old">Old</string>
    <string name="marquee_color_name">Color</string>
    <string name="marquee_dialog_btn_play_not_install">OK</string>
    <string name="save">SAVE</string>
    <string name="cancel">CANCEL</string>

</resources>
