<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootLinLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="6dp"
    android:paddingEnd="6dp">

    <TextView
        android:layout_marginTop="6dp"
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/marquee_dialog_title"
        android:textSize="16sp"
        android:textColor="#000000"
        android:textAlignment="viewStart"
        android:gravity="start"
        android:padding="6dp"/>

    <com.coocent.marquee.MarqueeColorPickerView
        android:id="@+id/color_picker_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layerType="software"
        android:tag="portrait" />

    <LinearLayout
        android:id="@+id/text_hex_wrapper"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <LinearLayout
                android:id="@+id/colorLinLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <com.coocent.marquee.MarqueeColorPickerPanelView
                    android:id="@+id/old_color_panel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
                <com.coocent.marquee.MarqueeColorPickerPanelView
                    android:id="@+id/new_color_panel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
            </LinearLayout>

            <ImageView
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/marquee_ic_revolving_lamp_arrow"/>

            <TextView
                android:padding="2dp"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_alignStart="@+id/colorLinLayout"
                android:layout_alignLeft="@+id/colorLinLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/marquee_flag_old"
                android:textColor="#FFFFFF"
                android:shadowColor="#000000"
                android:shadowRadius="2"
                android:shadowDx="1"
                android:shadowDy="1"
                android:layout_alignParentBottom="true"/>

            <TextView
                android:padding="2dp"
                android:layout_marginEnd="12dp"
                android:layout_marginRight="12dp"
                android:layout_alignEnd="@+id/colorLinLayout"
                android:layout_alignRight="@+id/colorLinLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/marquee_flag_new"
                android:textColor="#FFFFFF"
                android:shadowColor="#000000"
                android:shadowRadius="2"
                android:shadowDx="1"
                android:shadowDy="1"
                android:layout_alignParentBottom="true"/>

        </RelativeLayout>

        <EditText
            android:layout_marginStart="6dp"
            android:layout_marginLeft="6dp"
            android:id="@+id/hex_val"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="HEX"
            android:imeOptions="actionDone"
            android:maxLength="7"
            android:singleLine="true"
            android:inputType="textCapCharacters"
            android:visibility="gone"
            android:textSize="16sp"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">
        <TextView
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center"
            android:paddingStart="8dp"
            android:paddingLeft="8dp"
            android:paddingEnd="16dp"
            android:paddingRight="16dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/save"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:layout_toStartOf="@+id/save"
            android:layout_toLeftOf="@+id/save"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/cancel"
            android:textColor="@color/colorAccent"/>
    </RelativeLayout>


    <!--废弃-->
    <!--<TextView-->
        <!--android:visibility="gone"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:gravity="start"-->
        <!--android:text="@string/press_color_to_apply"-->
        <!--android:textAppearance="?android:attr/textAppearanceSmall" />-->
    <!--<TextView-->
        <!--android:visibility="gone"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="fill_parent"-->
        <!--android:layout_marginStart="10dp"-->
        <!--android:layout_marginEnd="10dp"-->
        <!--android:gravity="center"-->
        <!--android:text="→"-->
        <!--android:textSize="20sp" />-->

</LinearLayout>